proof reading and dealing with comments

--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 % temporarily set both to true
 \camerareadytrue
 % \camerareadyfalse
-\eprinttrue
+\eprintfalse
 % \eprintfalse
 
 %%% True definitions here:
