--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -60,7 +60,7 @@ TODO
 
 We have fully implemented Chipmunk and provide extensive benchmarks and comparisons to Squirrel in~\autoref{sec:benchmarks}.
 Chipmunk currently is the most concretely efficient multi-signature known that is based on assumptions that are assumed to remain valid in the presence of a quantum adversary.
-\gnote{Add cross-references between eprint and camera-ready version and mention differences}
+\eprint{\gnote{Add cross-references between eprint and camera-ready version and mention differences}}
 
 \subsection{Technical Overview}\label{sec:intro-tech-overview}
 
@@ -82,7 +82,7 @@ Chipmunk follows this blueprint, but improves upon all building blocks that are 
 \paragraph{Key-Homomorphic One-Time Signatures.}
 Squirrel uses a key-homomorphic one-time signature scheme that is similar to those of Boneh and Kim~\cite{BonKim2020} and Lyubashevsky and Micciancio~\cite{TCC:LyuMic08}.
 The details of the construction are not relevant for now.
-For Chipmunk, we use almost the exact same scheme, but observe by carefully inspecting their original security proof that a minor modification of their\gnote{@Mark/Nils:Unclear whether ``their'' refers to Squirrel or \cite{BonKim2020} or \cite{TCC:LyuMic08}. Rephrase} construction allows for their proof to produce much tighter parameters and thus smaller signatures.
+For Chipmunk, we use almost the exact same scheme, but observe by carefully inspecting their original security proof that a minor modification of the construction used in Squirrel allows for the proof to produce much tighter parameters and thus smaller signatures.
 
 \paragraph{Homomorphic Vector Commitments.}
 The vector commitment used by Squirrel is a homomorphic analogue of the classical Merkle tree construction.
@@ -107,5 +107,5 @@ We show that doing this alllows us to reduce signature size without affecting th
 
 We note that we grossly oversimplified many things in our above overview and that the precise construction and our improvements are more technically involved.
 While each individual improvement may seem conceptually simple, they all add up to significantly improved signature sizes, resulting in the by far most efficient multi-signature scheme from lattice assumptions to date.
-
-\gnote{Add encodings to contributions for eprint, possibly reference for camera-ready}
+\eprint{
+\gnote{Add encodings to contributions for eprint, possibly reference for camera-ready}}
