Fixed one more \gamma.

--- a/sections/multisig.tex
+++ b/sections/multisig.tex
@@ -217,7 +217,7 @@ Let $\ring, \ring_q, \ring_{q'}$ be as usual. We define the synchronized multi-s
 \end{definition}
 As a corollary of \autoref{thm:mainconstruction}, we obtain that $\msigchip$ is an unforgeable synchronized $\rho$-wise multi-signature that is individually correct and has correct aggregations in the presence of rogue keys and signatures,
 provided \eprint{$\hvcencoded$}\cameraready{$\hvccamera$} and $\otschip$ satisfy the appropriate security properties. The latter are guaranteed by \autoref{theo:veccom}, \autoref{thm:encodedhvcworks} and \autoref{theo:kots}, provided we set parameters appropriately and the appropriate Ring-SIS problems are hard.
-We collect the neccessary conditions in \autoref{tab:constraints}. Note that $W$ from \autoref{thm:mainconstruction} corresponds to $W = \tern_{\alpha_w}$. The parameter $\xi$ from \eprint{$\hvcencoded$}\cameraready{$\hvccamera$} and the parameter $\gamma$ from $\otschip$ are related by $\xi = 2\gamma$.
+We collect the neccessary conditions in \autoref{tab:constraints}. Note that $W$ from \autoref{thm:mainconstruction} corresponds to $W = \tern_{\alpha_w}$. and the parameter $\xi$ from \eprint{$\hvcencoded$}\cameraready{$\hvccamera$} is $\xi = 2$.
 
 \bigskip\noindent
 We now proceed to show \autoref{lem:msigindcorrect}, \autoref{lem:msigaggcorrect} and \autoref{lem:msigunf} to actually prove \autoref{thm:mainconstruction}.
