various small fixes

--- a/sections/veccom.tex
+++ b/sections/veccom.tex
@@ -576,7 +576,7 @@ Consequently, we have $\norm{\projring(\vec{p}_j)}, \norm{\projring(\vec{s}_j)} 
 \begin{lemma}\label{lem:hvcprobhom}
   Let $n,q,q',\alpha_w,\rho,\eta,\tau,\xi,\bagg$ be positive integers and $0 < \errorbound \leq 1$, such that $n$ is a power of two, $q,q'$ are prime,
 %   $\limbs\coloneqq \ceil{\log_{2\eta+1}q}$, $\limbs'\coloneqq \ceil{\log_{2\eta+1}q'}$
-and \cameraready{\gnote{May want to define symbol for subexpression for formatting reasons}}
+and
   \[
   \bagg \geq \eta\sqrt{2\alpha_w\rho
   \bigl(
