--- a/sections/prelim.tex
+++ b/sections/prelim.tex
@@ -159,8 +159,10 @@ Our concrete constructions depends on a significant number of tunable parameters
  $\otspkkeylen$ & Dimension (over $\ring_{q'}$) of public parameters and secret key components in the KOTS.\\
 %                & When constructing the synchronized multi-signatures, $\xi = 2\otspkkeylen$.\\
  $\bagg$ & Norm bound for HVC\eprint{s} after aggregation/homomorphic addition.\\
+ $\beta_\sigma$ & Norm bound for KOTS signatures after aggregation/homomorphic addition.\\
  $\alpha_w$ & Hamming weight for ring elements used as coefficients for homomorphic addition of our HVC\eprint{s} or KOTS.\\
  $\alpha_H$ & Hamming weight for ring elements used as randomizers in the construction of each individual KOTS signature.\\
+ $\phi$ & Norm bound parameter for secret keys of the KOTS. Specifically the two components have norm bound $\phi$ and $\phi\alpha_H$ respectively.\\
   $\errorbound$ & Error bound. Individual aggregation attempts may fail with at most this probability for our HVC\eprint{s} or KOTS.\\
   \bottomrule
  %
