--- a/sections/multisig.tex
+++ b/sections/multisig.tex
@@ -256,7 +256,7 @@ Let $W \subseteq \ring$ be a set and let $W' \coloneqq \{w^0-w^1| w^0,w^1 \in W\
 Let $H\colon\, \bin^* \to W^\rho$ be a random oracle.
 Let $\hots$ be a key-homomorphic one-time signature scheme with public keys in $\ring_{q'}^\xi$ and let $\hvc$ be a homomorphic vector commitment for domain $\ring_{q'}^\xi$.
 
-If both $\hots$ and $\hvc$ are $(\rho,W,\epsilon)$-probabilistically homomorphic, then the construction from \autoref{fig:nidvconst} has correct aggregations in the presence of rogue keys and signatures.
+If both $\hots$ and $\hvc$ are $(\rho,W,\errorbound)$-probabilistically homomorphic, then the construction from \autoref{fig:nidvconst} has correct aggregations in the presence of rogue keys and signatures.
 \end{lemma}
 \begin{proof}
   Let $\params = (\params_\hvc,\params_\hots)\gets\setup(\secparam)$, $\ell \in [\rho]$, $1\leq t\leq 2^\tau$, $m\in\bin^*$, $\pubkeys = (\vec{c}^1,\dots,\vec{c}^\ell)$, and $\signatures = (\sigma^1,\dots,\sigma^\ell)$ with 
@@ -271,7 +271,7 @@ If both $\hots$ and $\hvc$ are $(\rho,W,\epsilon)$-probabilistically homomorphic
   \]
   Let $\vec{c} = \sum_{i\in[\ell]}w^i\cdot\vec{c}^i$.
   Since the signatures individually verify, there exists a well-defined $\opk^i \coloneqq \hvc.\iverify(\params,\vec{c}^i,t,\vec{d}^i)$ for all $i\in[\ell]$.
-  Since further $H$ is a random oracle we can apply the $(\rho,W,\epsilon)$-probabilistic homomorphism of both $\hvc$ of $\hots$ to conclude that
+  Since further $H$ is a random oracle we can apply the $(\rho,W,\errorbound)$-probabilistic homomorphism of both $\hvc$ of $\hots$ to conclude that
   \[
     \Pr\Bigl[\hvc.\sverify(\params_\hvc,\vec{c},t,\vec{d}) \neq \sum_{i\in[\ell]} w^i\cdot\opk^i\Bigr] \leq \errorbound \enspace.
   \]
@@ -358,7 +358,7 @@ If $\hots$ is $W'$-multi-user existentially unforgeable under rerandomized keys 
 \begin{claim}\label{claim:bisasgoodasa}
   Let $\IG$ and $\bdv$ be as defined in \autoref{fig:fork}. Then it holds that
   \[\Pr\left[\begin{aligned}((\params,\pk^*),(\params,\sk^*)) \gets \IG(\secparam);\\ h_1,\dots,h_{p}\gets W;\\ (b,i,%(\pubkeys,t,m,\aggsig,\vec{w})
-  \omega) \gets \bdv^{\sign(\params,)}(x,h_1,\dots,h_{p})\end{aligned} : b = 1\right] = \epsilon(\secpar).\]
+  \omega) \gets \bdv^{\sign(\params,)}(x,h_1,\dots,h_{p})\end{aligned} : b = 1\right] = \errorbound(\secpar).\]
 \end{claim}
 \begin{proof}
   The input generation algorithm $\IG$ performs exactly the same setup expected by $\adv$ and then $\bdv$ simply executes $\adv$, perfectly simulating the random oracle by lazy sampling. The only interesting part of the simulation is the fact that $\bdv$ reorders the used randomness if a query includes the challenge public key $\pk^*$.
@@ -368,7 +368,7 @@ If $\hots$ is $W'$-multi-user existentially unforgeable under rerandomized keys 
   
   By combining \autoref{claim:bisasgoodasa} with \autoref{lem:moregeneralforking} we can conclude that
   \begin{equation}
-    \epsilon \leq \frac{p}{\abs{\tern_\alpha}} + \sqrt{p\cdot\Pr\left[\begin{aligned}((\params,\pk^*),(\params,\sk^*)) \gets \IG(\secparam);\\ (b,\omega^0,\omega^1)\gets \fork^{\sign(\params,\sk^*,\cdot,\cdot)}_\bdv(\params,\pk^*)\end{aligned} : b=1 \right]}.\label{eq:forkingresult}
+    \errorbound \leq \frac{p}{\abs{\tern_\alpha}} + \sqrt{p\cdot\Pr\left[\begin{aligned}((\params,\pk^*),(\params,\sk^*)) \gets \IG(\secparam);\\ (b,\omega^0,\omega^1)\gets \fork^{\sign(\params,\sk^*,\cdot,\cdot)}_\bdv(\params,\pk^*)\end{aligned} : b=1 \right]}.\label{eq:forkingresult}
   \end{equation}
   It remains to bound the probability
   \[
@@ -606,7 +606,7 @@ Since $\hots$ is assumed to be multi-user existentially unforgeable under rerand
   \end{equation}
   Combining Equations~\ref{opkstardifferentisnegl} and \ref{opkstarsameisnegl} with \autoref{eq:forkingresult} we can conclude that
   \[
-    \epsilon \leq \frac{p}{\abs{\tern_\alpha}} + \sqrt{p\cdot\negl}
+    \errorbound \leq \frac{p}{\abs{\tern_\alpha}} + \sqrt{p\cdot\negl}
   \]
-  which implies that $\epsilon$ is negligible and concludes the proof.\qed
+  which implies that $\errorbound$ is negligible and concludes the proof.\qed
   \fi
