--- a/sections/appconstraints.tex
+++ b/sections/appconstraints.tex
@@ -51,16 +51,16 @@ A selection of possible parameter choices is given in Table~\ref{tab:param}.
 \setlength{\tabcolsep}{0.5em}
 \renewcommand{\arraystretch}{1.05}
 \begin{table}\centering
-    \begin{tabular}{ccr|c|cccrr|crr|c}%\hline
+    \begin{tabular}{ccr|cc|cccrr|crr|c}%\hline
   
-      \multicolumn{3}{c|}{Parameter Sets}  
-      & \multirow{2}{*}{$\alpha_w$}  
-      & \multicolumn{5}{c|}{KOTS Param}  
-      & \multicolumn{3}{c|}{HVC Param}  
+      \multicolumn{3}{c|}{Parameter Sets}
+      & \multicolumn{2}{c|}{}
+      & \multicolumn{5}{c|}{KOTS Parameters}  
+      & \multicolumn{3}{c|}{HVC Parameters}  
       &  {\bf Agg. Sig. Size}\\%\cline{1-3}\cline{5-9}\cline{10-12}
       
       $\lambda$      & $\tau$
-      & \multicolumn{1}{c|}{$\rho$}&   &$\alpha_H$& $\varphi$ 
+      & \multicolumn{1}{c|}{$\rho$}& $\alpha_w$ & $\chi$  &$\alpha_H$& $\varphi$ 
       & $\gamma$                      & \multicolumn{1}{c}{$\beta_\sigma$}     
       & \multicolumn{1}{c|}{$q'$}                     & $\eta$       
       & $\bagg\quad$                  & \multicolumn{1}{c|}{$q$} 
@@ -68,29 +68,29 @@ A selection of possible parameter choices is given in Table~\ref{tab:param}.
   
   
       % &       &        &            &  &  \multicolumn{4}{c||}{HVC}  &  & \multicolumn{2}{c||}{KOTS}  & (Kilobytes) \\\hline\hline
-      &       &   1024 &         16 &        37 &         13 &       6 &        775,143 &  3,168,257 &    29 &       25,133 &   202,753 & 142 \\%\cline{3-13}
-      &    21 &   8192 &         16 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &    49 &      120,108 &   962,561 & 160 \\%\cline{3-13}
-      &       & 131072 &         16 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &    99 &      970,665 & 7,790,593 & 187 \\\cline{2-13}
+      &       &   1024 &         16 &        11 &        37 &         13 &       6 &        775,143 &  3,168,257 &    29 &       25,133 &   202,753 & 142 \\%\cline{3-13}
+      &    21 &   8192 &         16 &        11 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &    49 &      120,108 &   962,561 & 160 \\%\cline{3-13}
+      &       & 131072 &         16 &        11 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &    99 &      970,665 & 7,790,593 & 187 \\\cline{2-14}
   
-      &       &   1024 &         16 &        37 &         13 &       6 &        775,143 &  3,168,257 &    29 &       25,202 &   202,753 & 160 \\%\cline{3-13}
-  112 &    24 &   8192 &         16 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &    49 &      120,438 &   964,609 & 180 \\%\cline{3-13}
-      &       & 131072 &         16 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &    99 &      973,331 & 7,790,593 & 211 \\\cline{2-13}
+      &       &   1024 &         16 &        11 &        37 &         13 &       6 &        775,143 &  3,168,257 &    29 &       25,202 &   202,753 & 160 \\%\cline{3-13}
+  112 &    24 &   8192 &         16 &        11 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &    49 &      120,438 &   964,609 & 180 \\%\cline{3-13}
+      &       & 131072 &         16 &        11 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &    99 &      973,331 & 7,790,593 & 211 \\\cline{2-14}
   
-      &       &   1024 &         16 &        37 &         13 &       6 &        775,143 &  3,168,257 &    29 &       25,243 &   202,753 & 172 \\%\cline{3-13}
-      &    26 &   8192 &         16 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &    50 &      123,098 &   995,329 & 194 \\%\cline{3-13}
-      &       & 131072 &         16 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &    99 &      974,934 & 7,806,977 & 227 \\\midrule
+      &       &   1024 &         16 &        11 &        37 &         13 &       6 &        775,143 &  3,168,257 &    29 &       25,243 &   202,753 & 172 \\%\cline{3-13}
+      &    26 &   8192 &         16 &        11 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &    50 &      123,098 &   995,329 & 194 \\%\cline{3-13}
+      &       & 131072 &         16 &        11 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &    99 &      974,934 & 7,806,977 & 227 \\\midrule
   
-      &       &   1024 &         19 &        44 &          9 &       7 &        698,123 &  2,856,961 &    31 &       29,276 &   249,857 & 144 \\%\cline{3-13}
-      &    21 &   8192 &         19 &        44 &          8 &       8 &      1,761,048 &  7,114,753 &    12 &       32,252 &   270,337 & 189 \\%\cline{3-13}
-      &       & 131072 &         19 &        44 &          9 &       8 &      7,924,716 & 31,776,769 &    17 &      182,757 & 1,492,993 & 224 \\\cline{2-13}
+      &       &   1024 &         19 &        13 &        44 &          9 &       7 &        698,123 &  2,856,961 &    31 &       29,276 &   249,857 & 144 \\%\cline{3-13}
+      &    21 &   8192 &         19 &        13 &       44 &          8 &       8 &      1,761,048 &  7,114,753 &    12 &       32,252 &   270,337 & 189 \\%\cline{3-13}
+      &       & 131072 &         19 &        13 &       44 &          9 &       8 &      7,924,716 & 31,776,769 &    17 &      182,757 & 1,492,993 & 224 \\\cline{2-14}
   
-      &       &   1024 &         19 &        44 &          9 &       7 &        698,123 &  2,856,961 &    31 &       29,357 &   249,857 & 162 \\%\cline{3-13}
-  128 &    24 &   8192 &         19 &        44 &          8 &       8 &      1,761,048 &  7,114,753 &    12 &       32,339 &   270,337 & 213 \\%\cline{3-13}
-      &       & 131072 &         19 &        44 &          9 &       8 &      7,924,716 & 31,776,769 &    17 &      183,255 & 1,492,993 & 252 \\\cline{2-13}
+      &       &   1024 &         19 &        13 &       44 &          9 &       7 &        698,123 &  2,856,961 &    31 &       29,357 &   249,857 & 162 \\%\cline{3-13}
+  128 &    24 &   8192 &         19 &        13 &       44 &          8 &       8 &      1,761,048 &  7,114,753 &    12 &       32,339 &   270,337 & 213 \\%\cline{3-13}
+      &       & 131072 &         19 &        13 &       44 &          9 &       8 &      7,924,716 & 31,776,769 &    17 &      183,255 & 1,492,993 & 252 \\\cline{2-14}
   
-      &       &   1024 &         19 &        44 &          9 &       7 &        698,123 &  2,856,961 &    31 &       29,405 &   249,857 & 174 \\%\cline{3-13}
-      &    26 &   8192 &         19 &        44 &          8 &       8 &      1,761,048 &  7,114,753 &    12 &       32,392 &   270,337 & 229 \\%\cline{3-13}
-      &       & 131072 &         19 &        44 &          9 &       8 &      7,924,716 & 31,776,769 &    17 &      183,554 & 1,492,993 & 271 \\\bottomrule
+      &       &   1024 &         19 &        13 &       44 &          9 &       7 &        698,123 &  2,856,961 &    31 &       29,405 &   249,857 & 174 \\%\cline{3-13}
+      &    26 &   8192 &         19 &        13 &       44 &          8 &       8 &      1,761,048 &  7,114,753 &    12 &       32,392 &   270,337 & 229 \\%\cline{3-13}
+      &       & 131072 &         19 &        13 &       44 &          9 &       8 &      7,924,716 & 31,776,769 &    17 &      183,554 & 1,492,993 & 271 \\\bottomrule
     \end{tabular}
     \caption{Parameter sets for Chipmunk for a fixed ring dimension $n=512$.}\label{tab:param}
   \end{table}
