--- a/sections/prelim.tex
+++ b/sections/prelim.tex
@@ -132,14 +132,13 @@ Our concrete constructions depends on a significant number of tunable parameters
 
 \begin{table}
 \centering
-\begin{tabular}{c@{\hskip 2ex}l}
+\begin{tabular}{c@{\hskip 2ex}p{14.5cm}}
  Parameter & Meaning\\\toprule
  $n$ & Dimension of the ring $\ring = \defring$ we are working over; $n$ is a power of 2.\\
- $q$ & Prime number for HVC\eprint{s}. Our HVC\eprint{s} work\cameraready{s} modulo $q$, i.e. with $\ring_q = \ring/\langle q\rangle$.\\
-     & Note that our HVC\eprint{s} can be used to commit to elements from $\ring_{q'}$.\\
- $q'$ & Prime number for KOTS. Our KOTS works modulo $q'$, i.e. with $\ring_{q'} = \ring/\langle q'\rangle$.\\
- $\tau$ & Depth of our Merkle tree. $2^\tau$ is the number of indices for the HVC\eprint{s}.\\
- & This is also the number of time slots for the synchronized multi-signature.\\
+ $q$ & Prime number for HVC\eprint{s}. Our HVC\eprint{s} internally work\cameraready{s} modulo $q$, i.e. with $\ring_q = \ring/\langle q\rangle$.\\
+%     & Note that our HVC\eprint{s} can be used to commit to elements from $\ring_{q'}$.\\
+ $q'$ & Prime number for KOTS. Our KOTS works modulo $q'$, i.e. with $\ring_{q'} = \ring/\langle q'\rangle$. The HVC is used to commit to elements of $\ring_{q'}$.\\
+ $\tau$ & Depth of our Merkle tree. $2^\tau$ is the number of indices for the HVC\eprint{s}. This is also the number of time slots for the synchronized multi-signature.\\
 %  $\params$ & public parameters. \\
 %  $c$ & HVC commitment\\
 %  $d$ & HVC opening\\
@@ -154,6 +153,8 @@ Our concrete constructions depends on a significant number of tunable parameters
 %  $\limbs$ \\
 %  $\limbs$' &  \\
  $\eta$ & Arity parameter. Our constructions make use of $2\eta+1$-ary decomposition.\\
+ $\limbs$ & Number of limbs used in the decomposition of $\ring{q}$ elements.\\
+ $\limbs'$ & Number of limbs used in the decomposition of $\ring{q'}$ elements.\\
  $\xi$ & Dimension (over $\ring_{q'}$) of the elements our HVC\eprint{s} commit\cameraready{s} to.\\
 %       & When constructing the synchronized multi-signatures, $\xi = 2\otspkkeylen$.\\
  $\otspkkeylen$ & Dimension (over $\ring_{q'}$) of public parameters and secret key components in the KOTS.\\
@@ -161,9 +162,10 @@ Our concrete constructions depends on a significant number of tunable parameters
  $\bagg$ & Norm bound for HVC\eprint{s} after aggregation/homomorphic addition.\\
  $\beta_\sigma$ & Norm bound for KOTS signatures after aggregation/homomorphic addition.\\
  $\alpha_w$ & Hamming weight for ring elements used as coefficients for homomorphic addition of our HVC\eprint{s} or KOTS.\\
- $\alpha_H$ & Hamming weight for ring elements used as randomizers in the construction of each individual KOTS signature.\\
- $\phi$ & Norm bound parameter for secret keys of the KOTS. Specifically the two components have norm bound $\phi$ and $\phi\alpha_H$ respectively.\\
+ $\alpha_H$ & Hamming weight for ring elements used as randomizers in the construction of individual KOTS signatures.\\
+ $\varphi$ & Norm bound parameter for secret keys of the KOTS.\\
   $\errorbound$ & Error bound. Individual aggregation attempts may fail with at most this probability for our HVC\eprint{s} or KOTS.\\
+  $\chi$ & Maximum number of aggregation attempts. Aggregation ultimately fails if $\chi$ individual attempts have failed.\\
   \bottomrule
  %
 %  $\norm{.}$ & infinity-norm. For polynomials, we use monomial coordinates.\\
